syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service CouponProtoService{
	
	rpc GetCoupons (GetCouponsRequest) returns (CouponsResponse);
	
	rpc GetCoupon (GetCouponRequest) returns (CouponModel);

	rpc CreateCoupon (CreateCouponRequest) returns (CouponModel);

	rpc UpdateCoupon (UpdateCouponRequest) returns (CouponModel);

	rpc DeleteCoupon (DeleteCouponRequest) returns (DeleteCouponResponse);

}

message GetCouponsRequest {}

message GetCouponRequest{
	string couponCode = 1;
}

message CreateCouponRequest{
	CouponModel coupon = 1;
}

message UpdateCouponRequest{
	CouponModel coupon = 1;
}

message DeleteCouponRequest{
	string couponCode = 1;
}
message DeleteCouponResponse{
	bool success = 1;
}

message CouponsResponse{
	repeated CouponModel coupons = 1;
}


message CouponModel{
	string id = 1;
	string code = 2;
	string description = 3;
	double precent = 4;
	string createTimeStamp = 5;
	bool isExpired = 6;
}